--- a/data_page.html
+++ b/data_page.html
@@ -260,7 +260,7 @@
         </div>
     </div>
     <div class="main-content">
-        <div id="data-content" class="content-container">
+        <div id="data-content" class="content-container data-container">
             <div class="content-header">
                 <div class="content-title">Data</div>
                 <button class="close-button">Close</button>
@@ -417,7 +417,7 @@
 
 
         <!--------------------------------------------------- Desk 메뉴용 컨테이너 -------------------------------------------------------------->
-        <div id="desk-content" class="content-container">
+        <div id="desk-content" class="content-container desk-container">
             <!-- 헤더 영역 -->
             <div class="content-header">
                 <div class="content-title">
@@ -436,21 +436,21 @@
             </div>
         </div>
 
-        <div id="desk-content-right" class="content-container-2">
+        <div id="desk-content-right" class="content-container-2 desk-container-right">
             <div class="content-header">
                 <div class="content-title">Prescript History</div>
                 <button class="close-button">Close</button>
             </div>
         </div>
 
-        <div id="prescription-content" class="content-container">
+        <div id="prescription-content" class="content-container prescription-container">
             <div class="content-header">
                 <div class="content-title">Prescription</div>
                 <button class="close-button">Close</button>
             </div>
         </div>
 
-        <div id="reservation-content" class="content-container">
+        <div id="reservation-content" class="content-container reservation-container">
             <div class="content-header">
                 <div class="content-title">Reservation</div>
                 <button class="close-button">Close</button>
@@ -488,7 +488,7 @@
             </div>
         </div>
 
-        <div id="pharmacy-content" class="content-container">
+        <div id="pharmacy-content" class="content-container pharmacy-container">
             <div class="content-header">
                 <div class="content-title">Pharmacy</div>
                 <button class="close-button">Close</button>
