added Home menu, Icon
added Home menu, Icon

--- a/data_page.html
+++ b/data_page.html
@@ -164,6 +164,11 @@
         </div>
         <div class="menu-container">
             <div class="menu-item">
+                <img src="image/home_black.png" alt="Home" class="menu-icon menu-icon-default">
+                <img src="image/home.png" alt="Home" class="menu-icon menu-icon-active">
+                Home
+            </div>
+            <div class="menu-item">
                 <img src="image/desk_black.png" alt="Desk" class="menu-icon menu-icon-default">
                 <img src="image/desk.png" alt="Desk" class="menu-icon menu-icon-active">
                 Desk
@@ -479,6 +484,17 @@
             <div class="content-header">
                 <div class="content-title">Pharmacy</div>
                 <button class="close-button">Close</button>
+            </div>
+        </div>
+
+        <!-- Home 컨테이너 추가 -->
+        <div id="home-content" class="content-container">
+            <div class="content-header">
+                <div class="content-title">Home</div>
+                <button class="close-button">Close</button>
+            </div>
+            <div class="content-body">
+                <!-- Home 컨텐츠 내용 -->
             </div>
         </div>
     </div>
