--- a/data_page.html
+++ b/data_page.html
@@ -294,8 +294,16 @@
                             <input type="text" id="idNumber" name="idNumber" required>
                         </div>
                         <div class="form-group">
-                            <label for="phoneNumber">Cell phone number</label>
-                            <input type="tel" id="phoneNumber" name="phoneNumber" required>
+                            <label for="phoneNumber">Cell Phone Number</label>
+                            <input type="text" id="phoneNumber" name="phoneNumber">
+                        </div>
+                        <div class="form-group">
+                            <label for="gender">Gender</label>
+                            <select id="gender" name="gender" required>
+                                <option value="">Select Gender</option>
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label for="birthDay">Birth Date</label>
