--- a/data_page.html
+++ b/data_page.html
@@ -455,6 +455,8 @@
                     Please select a patient
                 </div>
             </div>
+            <div class="content-footer">
+            </div>
         </div>
 
         <div id="reservation-content" class="content-container reservation-container">
