달력 RSVD이후 즉시 업데이트
main화면 배경
달력 RSVD이후 즉시 업데이트

--- a/main.html
+++ b/main.html
@@ -10,9 +10,16 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-color: white;
+            background-image: url('image/main_bg.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             overflow-x: hidden;  /* 가로 스크롤 방지 */
             min-width: 800px;    /* 최소 너비 설정 */
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
 
         /* 상단 메뉴바 스타일 */
