--- a/data_page.html
+++ b/data_page.html
@@ -258,8 +258,30 @@
                 <button class="close-button">Close</button>
             </div>
             <div class="content-body-prescription">
+                <!-- 환자 선택 전 메시지 -->
                 <div class="no-patient-message" style="display: flex; justify-content: center; align-items: center; height: 100%;">
                     Please select a patient
+                </div>
+
+                <!-- 환자 선택 후 나타날 컨테이너들 -->
+                <div class="prescription-layout" style="display: none;">
+                    <!-- 왼쪽 컨테이너 (1번) -->
+                    <div class="prescription-left-container">
+                    </div>
+                    
+                    <!-- 중앙 컨테이너 (2,3번) -->
+                    <div class="prescription-center-container">
+                        <div class="prescription-center-top">
+                            <!-- 2번 영역 -->
+                        </div>
+                        <div class="prescription-center-bottom">
+                            <!-- 3번 영역 -->
+                        </div>
+                    </div>
+                    
+                    <!-- 오른쪽 컨테이너 (4번) -->
+                    <div class="prescription-right-container">
+                    </div>
                 </div>
             </div>
             <div class="content-footer-prescription">
