prescription 레이아웃 수정
prescription 레이아웃 수정

--- a/data_page.html
+++ b/data_page.html
@@ -199,7 +199,10 @@
         <div class="search-form">
             <input type="text" class="search-input" placeholder="Patient Search">
         </div>
-        <button class="new-patient-btn">New Patient</button>
+        <button class="new-patient-btn">
+            <img src="image/new_patient.png" alt="New Patient Icon">
+            New Patient
+        </button>
         <div class="action-buttons">
             <button class="action-button">
                 <div class="action-button-placeholder" title="채팅"></div>
@@ -285,7 +288,10 @@
                 </div>
             </div>
             <div class="content-footer-prescription" style="display: none;">
-
+                <button class="new-chart-btn">
+                    <img src="image/new_chart.png" alt="New Chart Icon">
+                    New Chart
+                </button>
             </div>
         </div>
     </div>
