footer에 room 표기 + register icon 추가
footer에 room 표기 + register icon 추가

--- a/data_page.html
+++ b/data_page.html
@@ -292,6 +292,7 @@
                     <img src="image/new_chart.png" alt="New Chart Icon">
                     New Chart
                 </button>
+                <span class="current-room-name"></span>
             </div>
         </div>
     </div>
@@ -441,7 +442,10 @@
                 </div>
             </div>
             <div class="content-footer">
-                <button class="register-btn">Register</button>
+                <button class="register-btn">
+                    <img src="image/register.png" alt="Register Icon">
+                    Register
+                </button>
             </div>
         </div>
 
