이빨 이미지, 삽입 및 크기조정/로고 이미지 변경
이빨 이미지, 삽입 및 크기조정
로고 이미지 변경

--- a/data_page.html
+++ b/data_page.html
@@ -154,8 +154,8 @@
 <body>
     <div class="sidebar1">
         <div class="logo-container">
-            <img src="image/logo.png" alt="MEDIQORE Logo" class="logo-image">
-            <span class="logo-text">MEDIQORE</span>
+            <img src="image/text_logo.png" alt="MEDIQORE Logo" class="logo-image">
+            
         </div>
         <div class="menu-container">
             <div class="menu-item">
@@ -276,7 +276,7 @@
                     
                     <div class="prescription-center-container">
                         <div class="prescription-center-top">
-                            <!-- 2번 영역 -->
+                            <img src="image/tooth.png" alt="Dental Chart" class="tooth-chart-img">
                         </div>
                         <div class="prescription-center-bottom">
                             <!-- 3번 영역 -->
