이빨 이미지에 컨버스 씌우기
이빨 이미지에 컨버스 씌우기

--- a/data_page.html
+++ b/data_page.html
@@ -277,6 +277,7 @@
                     <div class="prescription-center-container">
                         <div class="prescription-center-top">
                             <img src="image/tooth.png" alt="Dental Chart" class="tooth-chart-img">
+                            <canvas class="tooth-chart-canvas"></canvas>
                         </div>
                         <div class="prescription-center-bottom">
                             <!-- 3번 영역 -->
