처방전 화면 크기 조절
처방전 화면 크기 조절

--- a/data_page.html
+++ b/data_page.html
@@ -272,6 +272,7 @@
             <div class="content-body-prescription" style="display: none;">
                 <div class="prescription-layout">
                     <div class="prescription-left-container">
+                        <div class="prescription-left-title">Prescript History</div>
                     </div>
                     
                     <div class="prescription-center-container">
