처방전 prescript 텍스트 위치 수정
처방전 prescript 텍스트 위치 수정

--- a/data_page.html
+++ b/data_page.html
@@ -277,11 +277,14 @@
                     
                     <div class="prescription-center-container">
                         <div class="prescription-center-top">
-                            <img src="image/tooth.png" alt="Dental Chart" class="tooth-chart-img">
-                            <canvas class="tooth-chart-canvas"></canvas>
+                            <div class="prescription-section-title">Medical Records</div>
+                            <div class="tooth-chart-container">
+                                <img src="image/tooth.png" alt="Dental Chart" class="tooth-chart-img">
+                                <canvas class="tooth-chart-canvas"></canvas>
+                            </div>
                         </div>
                         <div class="prescription-center-bottom">
-                            <!-- 3번 영역 -->
+                            <div class="prescription-section-title">Prescript</div>
                         </div>
                     </div>
                          <!-- 오른쪽 컨테이너 (4번) -->
