--- a/data_page.html
+++ b/data_page.html
@@ -284,7 +284,7 @@
                             </div>
                         </div>
                         <div class="prescription-center-bottom">
-                            <div class="prescription-section-title">Prescript</div>
+                            <div class="prescription-section-title">Diagnosis & Prescription</div>
                         </div>
                     </div>
                          <!-- 오른쪽 컨테이너 (4번) -->
