css코드 나누기
css코드 나누기

--- a/data_page.html
+++ b/data_page.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/tooltip_calendar.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/prescription.css">
+    <link rel="stylesheet" href="css/prescription-payment.css">
 </head>
     <style>
         body {
