--- a/data_page.html
+++ b/data_page.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/prescription.css">
     <link rel="stylesheet" href="css/prescription-payment.css">
+    <!-- QR 코드 라이브러리 -->
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
+    <!-- 대체 QR 코드 라이브러리 -->
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
 </head>
     <style>
         body {
