--- a/data_page.html
+++ b/data_page.html
@@ -17,9 +17,7 @@
     <link rel="stylesheet" href="css/prescription.css">
     <link rel="stylesheet" href="css/prescription-payment.css">
     <!-- QR 코드 라이브러리 -->
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
-    <!-- 대체 QR 코드 라이브러리 -->
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <script src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
 </head>
     <style>
         body {
