QR코드 제거 및 데이터 저장정도만 코드로 남겨둠
QR코드 제거 및 데이터 저장정도만 코드로 남겨둠

--- a/data_page.html
+++ b/data_page.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/prescription.css">
     <link rel="stylesheet" href="css/prescription-payment.css">
-    <!-- QR 코드 라이브러리 -->
-    <script src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
+    <!-- QR 코드 라이브러리 - 현재 사용하지 않음 -->
+    <!-- <script src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script> -->
 </head>
     <style>
         body {
