--- a/data_page.html
+++ b/data_page.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/prescription.css">
     <link rel="stylesheet" href="css/prescription-payment.css">
+    <link rel="stylesheet" href="css/data-menu.css">
     <!-- QR 코드 라이브러리 - 현재 사용하지 않음 -->
     <!-- <script src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script> -->
 </head>
