footer class 분리
footer class 분리

--- a/data_page.html
+++ b/data_page.html
@@ -388,7 +388,7 @@
                     </div>
                     
                     <!-- 페이지네이션을 footer 영역으로 이동 -->
-                    <div class="content-footer">
+                    <div class="data-content-footer">
                         <div id="pagination-controls">
                             <!-- 페이지네이션 버튼은 JavaScript로 동적 생성됩니다 -->
                         </div>
