id 넘버 입력폼에 check 버튼 추가
id 넘버 입력폼에 check 버튼 추가

--- a/data_page.html
+++ b/data_page.html
@@ -409,12 +409,15 @@
                     <div class="section-box">
                         <h3>Personal Information</h3>
                         <div class="form-group">
-                            <label for="patientName">Patient Name</label>
-                            <input type="text" id="patientName" name="patientName" required>
+                            <label for="idNumber">ID Card / Passport number</label>
+                            <div class="id-input-wrapper">
+                                <input type="text" id="idNumber" name="idNumber" required>
+                                <button type="button" class="id-check-btn">Check</button>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="idNumber">ID Card / Passport number</label>
-                            <input type="text" id="idNumber" name="idNumber" required>
+                            <label for="patientName">Patient Name</label>
+                            <input type="text" id="patientName" name="patientName" required>
                         </div>
                         <div class="form-group">
                             <label for="phoneNumber">Cell Phone Number</label>
