환자 방문 기록 가져오기 (미완성 상태, UI만 제작되어있음)
환자 방문 기록 가져오기 (미완성 상태, UI만 제작되어있음)

--- a/data_page.html
+++ b/data_page.html
@@ -400,7 +400,7 @@
         <div id="patient-registration-content" class="content-container">
             <div class="content-header">
                 <div class="content-title">Patient Registration</div>
-                <button class="close-button">Close</button>
+                <button class="reset-btn"><img src="image/reset.png" alt="Reset"></button>
             </div>
             <div class="vertical-line-left"></div>
             <div class="vertical-line-right"></div>
