--- a/main.html
+++ b/main.html
@@ -4,101 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEDIQORE</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background-image: url('image/main_bg.png');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            overflow-x: hidden;  /* 가로 스크롤 방지 */
-            min-width: 800px;    /* 최소 너비 설정 */
-            user-select: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-        }
-
-        /* 상단 메뉴바 스타일 */
-        .top-menu {
-            width: 100%;
-            height: 60px;
-            background-color: white;
-            border-bottom: 1px solid hsl(0, 0%, 85%);
-            display: flex;
-            justify-content: space-between;  /* 로고와 로그인 섹션 양쪽 정렬 */
-            align-items: center;
-            padding: 0 20px;
-            box-sizing: border-box;  /* padding이 너비에 포함되도록 */
-        }
-
-        /* 로고 컨테이너 스타일 */
-        .logo-container {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-
-        .logo-image {
-            width: 30px;
-            height: 30px;
-            object-fit: contain;
-        }
-
-        .logo-text {
-            font-weight: 700;
-            font-size: 16px;
-            color: rgb(0, 102, 255);
-        }
-
-        /* 로그인 섹션 스타일 */
-        .login-section {
-            position: static;  /* absolute 제거 */
-            display: flex;
-            align-items: center;
-            gap: 10px;  /* 요소들 사이 간격 */
-            margin-right: 20px;  /* 우측 여백 추가 */
-        }
-
-        /* 로그인 섹션의 input 스타일 수정 */
-        .login-section input {
-            margin: 0;
-            padding: 8px;
-            height: 36px;  /* 로그인 버튼과 동일한 높이 */
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        /* 계정 입력 필드만 따로 너비 설정 */
-        .login-section input#account {
-            width: 180px;  /* 기존 150px에서 20% 증가 */
-        }
-
-        /* 비밀번호 입력 필드 */
-        .login-section input#password {
-            width: 150px;
-        }
-
-        .login-section button {
-            margin: 0;
-            padding: 8px 16px;
-            cursor: pointer;
-            height: 36px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: white;
-        }
-
-        .login-section button#login {
-            background-color: rgb(0, 102, 255);
-            color: white;
-            border: none;
-        }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="top-menu">
@@ -214,5 +120,25 @@
             }
         });
     </script>
+    <footer class="main-footer">
+        <div class="footer-content">
+            <div class="company-info">
+                <h3>MEDIQORE</h3>
+                <p>Reg. No: 123-45-67890 | CEO: Herald Seo</p>
+                <p>123 Teheran-ro, Gangnam, Seoul</p>
+            </div>
+            <div class="contact-info">
+                <h3>CUSTOMER SERVICE</h3>
+                <p>Tel: +82-2-123-4567 | Hours : Mon ~ Fri 09:00 ~ 18:00</p>
+                <p>Email: support@mediqore.com</p>
+            </div>
+            <div class="legal-info">
+                <h3>LEGAL</h3>
+                <p>© 2023 MEDIQORE. All rights reserved.</p>
+                <p><a href="#">Privacy</a> | <a href="#">Terms</a></p>
+                <img src="image/location_logo.png" alt="MEDIQORE Logo" class="footer-logo">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
