--- a/data_page.html
+++ b/data_page.html
@@ -46,6 +46,7 @@
         import {initializeDataMenu} from './js/data-menu.js';
         import {initializePrescriptionPayment} from './js/prescription-payment.js';
         import {initializePatientEdit} from './js/patient-edit.js';
+        import {initializePatientView} from './js/patient-view.js';
 
         // 전역 함수
         window.app = app;
@@ -166,6 +167,7 @@
             initializeDataMenu();
             initializePrescriptionPayment(); // Prescription Payment 초기화
             initializePatientEdit(); // 환자 정보 수정 기능 초기화
+            initializePatientView(); // 환자 방문 기록 조회 기능 초기화
 
     </script>
 </head>
@@ -717,6 +719,30 @@
                         <button type="submit" id="save-patient" class="btn btn-primary">Save Changes</button>
                     </div>
                 </form>
+            </div>
+        </div>
+    </div>
+    
+    <!-- 환자 방문 기록 모달 -->
+    <div id="view-patient-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Patient Visit History</h3>
+                <span id="close-view-modal" class="close">&times;</span>
+            </div>
+            <div class="modal-body">
+                <!-- 환자 기본 정보 요약 -->
+                <div class="patient-info-summary" id="view-patient-basic-info">
+                    <!-- 환자 정보는 JavaScript에서 동적으로 채워짐 -->
+                </div>
+                
+                <!-- 방문 기록 -->
+                <div class="visit-history-container">
+                    <div id="visit-history-log">
+                        <!-- 방문 기록은 JavaScript에서 동적으로 채워짐 -->
+                        <div class="no-visits-message">No visit history found for this patient.</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
