--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
         <div class="login-section">
             <input type="text" placeholder="Account" id="account">
             <input type="password" placeholder="Password" id="password">
-            <button id="login">Login</button>
+            <button id="login">Log In</button>
             <button id="contact">Contact</button>
         </div>
     </div>
@@ -122,22 +122,7 @@
     </script>
     <footer class="main-footer">
         <div class="footer-content">
-            <div class="company-info">
-                <h3>MEDIQORE</h3>
-                <p>Reg. No: 123-45-67890 | CEO: Herald Seo</p>
-                <p>123 Teheran-ro, Gangnam, Seoul</p>
-            </div>
-            <div class="contact-info">
-                <h3>CUSTOMER SERVICE</h3>
-                <p>Tel: +82-2-123-4567 | Hours : Mon ~ Fri 09:00 ~ 18:00</p>
-                <p>Email: support@mediqore.com</p>
-            </div>
-            <div class="legal-info">
-                <h3>LEGAL</h3>
-                <p>© 2023 MEDIQORE. All rights reserved.</p>
-                <p><a href="#">Privacy</a> | <a href="#">Terms</a></p>
-                <img src="image/location_logo.png" alt="MEDIQORE Logo" class="footer-logo">
-            </div>
+            <p>© 2023 MEDIQORE | Reg. No: 123-45-67890 | CEO: Herald Seo | Tel: +82-2-123-4567 | Email: support@mediqore.com | <a href="#">Privacy</a> | <a href="#">Terms</a> <img src="image/location_logo.png" alt="Location" class="footer-logo"></p>
         </div>
     </footer>
 </body>
