로딩 페이지 완성
로딩 페이지 완성

--- a/main.html
+++ b/main.html
@@ -152,7 +152,8 @@
                     lastUpdated: serverTimestamp()
                 });
 
-                window.location.href = 'data_page.html';
+                // 로딩 페이지로 리다이렉션
+                window.location.href = 'loading.html';
 
             } catch (error) {
                 console.error('Login error:', error);
@@ -162,7 +163,7 @@
     </script>
     <footer class="main-footer">
         <div class="footer-content">
-            <p>© 2023 MEDIQORE | Reg. No: 123-45-67890 | CEO: Herald Seo | Tel: +82-2-123-4567 | Email: support@mediqore.com | <a href="#">Privacy</a> | <a href="#">Terms</a> <img src="image/location_logo.png" alt="Location" class="footer-logo"></p>
+            <p>© 2023 MEDIQORE | Reg. No: 123-45-67890 | CEO: Herald Seo | Tel: +82-2-123-4567 | Email: support@mediqore.com | <a href="#">Privacy</a> | <a href="#">Terms</a> <img src="image/main/location_logo.png" alt="Location" class="footer-logo"></p>
         </div>
     </footer>
 </body>
