Data-menu에 Dailay 버튼 추가
Data-menu에 Dailay 버튼 추가

--- a/data_page.html
+++ b/data_page.html
@@ -343,6 +343,9 @@
                             <button class="data-filter-btn" data-type="staff">
                                 Staff
                             </button>
+                            <button class="data-filter-btn" data-type="daily">
+                                <img src="image/history.png" alt="Daily" class="daily-icon"> Daily
+                            </button>
                         </div>
                     </div>
                     
@@ -744,6 +747,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- 달력 컨테이너 추가 -->
+    <div id="daily-calendar-container" style="display: none;">
+        <div class="daily-calendar">
+            <!-- 달력은 JavaScript로 동적 생성됨 -->
         </div>
     </div>
 </body>
