--- a/data_page.html
+++ b/data_page.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/tooltip_calendar.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/prescription.css">
+    <link rel="stylesheet" href="css/prescription_canvas.css">
     <link rel="stylesheet" href="css/prescription-payment.css">
     <link rel="stylesheet" href="css/data-menu.css">
     <!-- QR 코드 라이브러리 - 현재 사용하지 않음 -->
