--- a/data_page.html
+++ b/data_page.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="css/prescription_canvas.css">
     <link rel="stylesheet" href="css/prescription-payment.css">
     <link rel="stylesheet" href="css/data-menu.css">
+    <link rel="stylesheet" href="css/qrcode.css">
+    <!-- QR Code Styling 라이브러리 추가 -->
+    <script type="text/javascript" src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
 </head>
     <style>
         body {
