로고 통일, 약국 프로젝트 준비
로고 통일, 약국 프로젝트 준비

--- a/data_page.html
+++ b/data_page.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/prescription-payment.css">
     <link rel="stylesheet" href="css/data-menu.css">
     <link rel="stylesheet" href="css/qrcode.css">
+    <link rel="stylesheet" href="css/pharmacy.css">
     <!-- D3.js 라이브러리 추가 -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- QR Code Styling 라이브러리 추가 -->
@@ -205,8 +206,8 @@
                 Reservation
             </div>
             <div class="menu-item">
-                <img src="image/pharmacy_black.png" alt="Pharmacy" class="menu-icon menu-icon-default">
-                <img src="image/pharmacy.png" alt="Pharmacy" class="menu-icon menu-icon-active">
+                <img src="image/pharmacy_black.png" alt="Pharmacy" class="menu-item-pharmacy menu-icon-default">
+                <img src="image/pharmacy.png" alt="Pharmacy" class="menu-item-pharmacy menu-icon-active">
                 Pharmacy
             </div>
             <div class="menu-item">
