--- a/main.html
+++ b/main.html
@@ -11,8 +11,7 @@
 <body>
     <div class="top-menu">
         <div class="logo-container">
-            <img src="image/logo.png" alt="MEDIQORE Logo" class="logo-image">
-            <span class="logo-text">MEDIQORE</span>
+            <img src="image/text_logo.png" alt="MEDIQORE Logo" class="logo-image">
         </div>
         <div class="login-section">
             <button id="login">Sign In</button>
