hospital로 파일명 변경/ 역할에 따라 접근 html 분류
hospital로 파일명 변경/ 역할에 따라 접근 html 분류

--- a/loading.html
+++ b/loading.html
@@ -27,6 +27,6 @@
         </div>
     </div>
 
-    <script src="js/loading.js"></script>
+    <script src="js/loading.js" type="module"></script>
 </body>
 </html>
