--- a/pharmacy.html
+++ b/pharmacy.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>MEDIQORE - Pharmacy</title>
+    <link rel="stylesheet" href="css/sidebar1.css">
+    <link rel="stylesheet" href="css/sidebar2.css">
+    <link rel="stylesheet" href="css/topbar.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/pharmacy.css">
+</head>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        background-color: rgb(201, 214, 255);
+    }
+</style>
+<body>
+    <!-- 왼쪽 사이드바 (sidebar1) -->
+    <div class="sidebar1">
+        <div class="logo-container">
 
+        </div>
+    </div>
+
+    <!-- 상단 메뉴바 (topbar) -->
+    <div class="top-bar">
+    </div>
+
+    <!-- 오른쪽 사이드바 (sidebar2) -->
+    <div class="sidebar2">
+    </div>
+
+    <!-- 메인 콘텐츠 영역 -->
+    <div class="main-content">
+    </div>
+</body>
+</html>
