폴더 나누기 / 약국 페이지 밑작업
폴더 나누기 / 약국 페이지 밑작업

--- a/hospital.html
+++ b/hospital.html
@@ -6,20 +6,20 @@
     <title>MEDIQORE - Hospital</title>
     <!-- Google Fonts 추가 -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/sidebar1.css">
-    <link rel="stylesheet" href="css/sidebar2.css">
-    <link rel="stylesheet" href="css/topbar.css">
-    <link rel="stylesheet" href="css/registration.css">
-    <link rel="stylesheet" href="css/desk.css">
-    <link rel="stylesheet" href="css/calendar.css">
-    <link rel="stylesheet" href="css/tooltip_calendar.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/prescription.css">
-    <link rel="stylesheet" href="css/prescription_canvas.css">
-    <link rel="stylesheet" href="css/prescription-payment.css">
-    <link rel="stylesheet" href="css/data-menu.css">
-    <link rel="stylesheet" href="css/qrcode.css">
-    <link rel="stylesheet" href="css/pharmacy.css">
+    <link rel="stylesheet" href="css/hospital/sidebar1.css">
+    <link rel="stylesheet" href="css/hospital/sidebar2.css">
+    <link rel="stylesheet" href="css/hospital/topbar.css">
+    <link rel="stylesheet" href="css/hospital/registration.css">
+    <link rel="stylesheet" href="css/hospital/desk.css">
+    <link rel="stylesheet" href="css/hospital/calendar.css">
+    <link rel="stylesheet" href="css/hospital/tooltip_calendar.css">
+    <link rel="stylesheet" href="css/hospital/common.css">
+    <link rel="stylesheet" href="css/hospital/prescription.css">
+    <link rel="stylesheet" href="css/hospital/prescription_canvas.css">
+    <link rel="stylesheet" href="css/hospital/prescription-payment.css">
+    <link rel="stylesheet" href="css/hospital/data-menu.css">
+    <link rel="stylesheet" href="css/hospital/qrcode.css">
+
     <!-- D3.js 라이브러리 추가 -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- QR Code Styling 라이브러리 추가 -->
@@ -204,11 +204,6 @@
                 <img src="image/reservation_black.png" alt="Reservation" class="menu-icon menu-icon-default">
                 <img src="image/reservation.png" alt="Reservation" class="menu-icon menu-icon-active">
                 Reservation
-            </div>
-            <div class="menu-item">
-                <img src="image/pharmacy_black.png" alt="Pharmacy" class="menu-item-pharmacy menu-icon-default">
-                <img src="image/pharmacy.png" alt="Pharmacy" class="menu-item-pharmacy menu-icon-active">
-                Pharmacy
             </div>
             <div class="menu-item">
                 <img src="image/data_black.png" alt="Data" class="menu-icon menu-icon-default">
