--- a/pharmacy.html
+++ b/pharmacy.html
@@ -4,32 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>MEDIQORE - Pharmacy</title>
-    <link rel="stylesheet" href="css/sidebar1.css">
-    <link rel="stylesheet" href="css/sidebar2.css">
-    <link rel="stylesheet" href="css/topbar.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/pharmacy.css">
+    <link rel="stylesheet" href="css/pharmacy/sidebar1.css">
+    <link rel="stylesheet" href="css/pharmacy/sidebar2.css">
+    <link rel="stylesheet" href="css/pharmacy/topbar.css">
+    <link rel="stylesheet" href="css/pharmacy/common.css">
+    <link rel="stylesheet" href="css/pharmacy/pharmacy.css">
 </head>
 <style>
     body {
         margin: 0;
         padding: 0;
         height: 100vh;
-        background-color: rgb(201, 214, 255);
+        background-color: #30E026;
     }
 </style>
 <body>
     <!-- 왼쪽 사이드바 (sidebar1) -->
     <div class="sidebar1">
         <div class="logo-container">
-
+            <img src="image/text_logo.png" alt="MEDIQORE Logo" class="logo-image">
+        </div>
+        <div class="menu-container">
+            <div class="menu-item">
+                <img src="image/home_black.png" alt="Home" class="menu-icon menu-icon-default">
+                <img src="image/home.png" alt="Home" class="menu-icon menu-icon-active">
+                Home
+            </div>
+            <div class="menu-item">
+                <img src="image/pharmacy_black.png" alt="prepare" class="menu-icon menu-icon-default pharmacy-icon-special">
+                <img src="image/pharmacy.png" alt="prepare" class="menu-icon menu-icon-active pharmacy-icon-special">
+                Prepare
+            </div>    
         </div>
     </div>
 
     <!-- 상단 메뉴바 (topbar) -->
     <div class="top-bar">
     </div>
-
+ 
     <!-- 오른쪽 사이드바 (sidebar2) -->
     <div class="sidebar2">
     </div>
