--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEDIQORE</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/signin.css">
+    <link rel="stylesheet" href="css/main/main.css">
+    <link rel="stylesheet" href="css/main/signin.css">
     <style>
         /* 로그인 버튼 눌림 효과 */
         .login-btn:active {
